kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-banano-utils-deployment
  namespace: banano-utils
  labels:
    app: go-banano-utils
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-banano-utils
  template:
    metadata:
      labels:
        app: go-banano-utils
    spec:
      containers:
        - name: go-banano-utils
          image: replaceme
          command: ["/bin/bash", "-c"]
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
          args: ["./app"]
          ports:
            - containerPort: 3000
          imagePullPolicy: "Always"
      imagePullSecrets:
        - name: regcred
