kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: banano-utils-service
  namespace: banano-utils
spec:
  selector:
    app: banano-utils
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
