kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banano-utils-ingress
  namespace: banano-utils
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - utils.banano.cc
      secretName: utils-banano-cc-server-secret
  rules:
    - host: utils.banano.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banano-utils-service
                port:
                  number: 3000
